--- a/src/cbPyLib/cellbrowser/sampleConfig/desc.conf
+++ b/src/cbPyLib/cellbrowser/sampleConfig/desc.conf
@@ -8,14 +8,15 @@ title = "Sample Dataset description"
 #image = "thumb.jpg"
 
 # abstract of paper or dataset summary text
-abstract = """Please edit desc.conf to change this text or comment out the 
-abstract= line and create abstract.html in the same directory as desc.conf
-"""
+abstract = The failure of multiple sclerosis lesions to resolve in the months after they form leads to smouldering 
+demyelination and axon degeneration (chronic active/slowly expanding lesions). 
+To define mechanisms underlying this disabling, progressive neurodegenerative state, and to foster development of new therapeutics, 
+we used MRI-informed single-nucleus RNA sequencing to profile the edge of demyelinated white matter lesions 
+at various stages of inflammation and compared with healthy control white matter.
 
 # methods: please describe roughly what the samples are and how you processed them computationally
-methods = """
-Please edit desc.conf to change this text or comment out the methods= line and create methods.html in the same directory as desc.conf
-"""
+methods = Human single-nucleus RNA profiles collected from 5 progressive multiple sclerosis autopsy brains 
+(sampling of the lesion core,the edge and the periplaque of chronic active vs inactive MS lesions) and 3 healthy controls autopsy brains via 10X Genomics protocol.
 
 # Note that all of these identifiers can also be a list of values.
 # e.g. you could write 
@@ -25,7 +26,7 @@ Please edit desc.conf to change this text or comment out the methods= line and c
 # URL to pre-print
 biorxiv_url = "https://www.biorxiv.org/content/123/123.full Strangelove et al."
 # URL to paper fulltext
-#paper_url = "http://www.nature.com/xxx Strangelove et al, Nature 2021"
+#paper_url = https://pubmed.ncbi.nlm.nih.gov/34497421/
 # URL to some other dataset related website, e.g. the hosting lab's own viewer
 #other_url= "http://university.edu/lab/dataset Our Lab Website"
 # DOI
@@ -35,7 +36,7 @@ biorxiv_url = "https://www.biorxiv.org/content/123/123.full Strangelove et al."
 # PMID of publication
 # pmid = "12343234 Strangelove et al"
 # GEO Series accession, usually starts with GSE
-# geo_series = "GSE25097"
+# geo_series = GSE180759
 # dbGaP accession, usually starts with phs.
 # dbgap = "phs000424.v7.p2"
 # arrayexpress accession
@@ -43,7 +44,7 @@ biorxiv_url = "https://www.biorxiv.org/content/123/123.full Strangelove et al."
 # ENA project accession
 # ena_project = "ENAP12341"
 # SRA accession
-# sra_study = "xxxx"
+# sra_study = SRP329679
 # NBCI Bioproject acccession
 # bioproject = "xxxx"
 # Others:
@@ -59,7 +60,7 @@ biorxiv_url = "https://www.biorxiv.org/content/123/123.full Strangelove et al."
 # rawMatrixFile= "raw10XFile.mtz.zip"
 # rawMatrixNote= "Original 10X output file"
 
-#submitter = "John Doe"
+#submitter = Martina Absinta
 #version = 1
 #submission_date = "2019-04-22"
 #lab = "Mike Bigboss"
